# Algorithm_Visual_Presenter

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Inc/: AlgorithmVisualPresenter.h  AlgorithmVisualPresenterScreen.h  CMakeLists.txt  NoisePresenter.h  NoiseProvider.h  SingularAlgorithmPresenter.h  SortingPresenter.h  SortingProvider.h
Inc/Interface/: InterfaceBox.h  InterfaceEngine.h  InterfaceLayout.h  InterfaceScreen.h  InterfaceWidget.h
Inc/Render/: RenderEngine.h  ShaderPipeline.h  TextManager.h  Texture.h  Viewer3D.h
Resources/shaders/: mult_frag.glsl  mult_geom.glsl  mult_vert.glsl  sim_frag.glsl  sim_vert.glsl  test_frag.glsl  test_vert.glsl
Src/: AlgorithmVisualPresenter.cpp  AlgorithmVisualPresenterScreen.cpp  CMakeLists.txt  NoisePresenter.cpp  NoiseProvider.cpp  SingularAlgorithmPresenter.cpp  SortingPresenter.cpp  SortingProvider.cpp
Src/App/: AppEngine.cpp
Src/Interface/: InterfaceActionScreen.cpp  InterfaceBox.cpp  InterfaceEngine.cpp  InterfaceLayout.cpp  InterfaceScreen.cpp  InterfaceWidget.cpp
Src/Render/: RenderEngine.cpp  ShaderPipeline.cpp  TextManager.cpp  Texture.cpp  Viewer3D.cpp
